--- a/notebooks/water.ipynb
+++ b/notebooks/water.ipynb
@@ -9,12 +9,493 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import modules\n",
+    "import pandas as pd\n",
+    "\n",
+    "# train-test\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# models\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC  # suppport vector machine\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>204.890455</td>\n",
+       "      <td>20791.318981</td>\n",
+       "      <td>7.300212</td>\n",
+       "      <td>368.516441</td>\n",
+       "      <td>564.308654</td>\n",
+       "      <td>10.379783</td>\n",
+       "      <td>86.990970</td>\n",
+       "      <td>2.963135</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.716080</td>\n",
+       "      <td>129.422921</td>\n",
+       "      <td>18630.057858</td>\n",
+       "      <td>6.635246</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>592.885359</td>\n",
+       "      <td>15.180013</td>\n",
+       "      <td>56.329076</td>\n",
+       "      <td>4.500656</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.099124</td>\n",
+       "      <td>224.236259</td>\n",
+       "      <td>19909.541732</td>\n",
+       "      <td>9.275884</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>418.606213</td>\n",
+       "      <td>16.868637</td>\n",
+       "      <td>66.420093</td>\n",
+       "      <td>3.055934</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.316766</td>\n",
+       "      <td>214.373394</td>\n",
+       "      <td>22018.417441</td>\n",
+       "      <td>8.059332</td>\n",
+       "      <td>356.886136</td>\n",
+       "      <td>363.266516</td>\n",
+       "      <td>18.436524</td>\n",
+       "      <td>100.341674</td>\n",
+       "      <td>4.628771</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.092223</td>\n",
+       "      <td>181.101509</td>\n",
+       "      <td>17978.986339</td>\n",
+       "      <td>6.546600</td>\n",
+       "      <td>310.135738</td>\n",
+       "      <td>398.410813</td>\n",
+       "      <td>11.558279</td>\n",
+       "      <td>31.997993</td>\n",
+       "      <td>4.075075</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
+       "0       NaN  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
+       "1  3.716080  129.422921  18630.057858     6.635246         NaN    592.885359   \n",
+       "2  8.099124  224.236259  19909.541732     9.275884         NaN    418.606213   \n",
+       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
+       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
+       "\n",
+       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+       "0       10.379783        86.990970   2.963135           0  \n",
+       "1       15.180013        56.329076   4.500656           0  \n",
+       "2       16.868637        66.420093   3.055934           0  \n",
+       "3       18.436524       100.341674   4.628771           0  \n",
+       "4       11.558279        31.997993   4.075075           0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../datasets/water_potability.csv')\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3276, 10)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3276 entries, 0 to 3275\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   ph               2785 non-null   float64\n",
+      " 1   Hardness         3276 non-null   float64\n",
+      " 2   Solids           3276 non-null   float64\n",
+      " 3   Chloramines      3276 non-null   float64\n",
+      " 4   Sulfate          2495 non-null   float64\n",
+      " 5   Conductivity     3276 non-null   float64\n",
+      " 6   Organic_carbon   3276 non-null   float64\n",
+      " 7   Trihalomethanes  3114 non-null   float64\n",
+      " 8   Turbidity        3276 non-null   float64\n",
+      " 9   Potability       3276 non-null   int64  \n",
+      "dtypes: float64(9), int64(1)\n",
+      "memory usage: 256.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ph                 491\n",
+       "Hardness             0\n",
+       "Solids               0\n",
+       "Chloramines          0\n",
+       "Sulfate            781\n",
+       "Conductivity         0\n",
+       "Organic_carbon       0\n",
+       "Trihalomethanes    162\n",
+       "Turbidity            0\n",
+       "Potability           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill missing values\n",
+    "df[\"ph\"].fillna(value = df[\"ph\"].mean(), inplace = True)\n",
+    "df[\"Sulfate\"].fillna(value = df[\"Sulfate\"].mean(), inplace = True)\n",
+    "df[\"Trihalomethanes\"].fillna(value = df[\"Trihalomethanes\"].mean(), inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ph                 0\n",
+       "Hardness           0\n",
+       "Solids             0\n",
+       "Chloramines        0\n",
+       "Sulfate            0\n",
+       "Conductivity       0\n",
+       "Organic_carbon     0\n",
+       "Trihalomethanes    0\n",
+       "Turbidity          0\n",
+       "Potability         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ml Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop('Potability',axis=1)\n",
+    "Y = df['Potability']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x - train shape: (2194, 9)\n",
+      "x - test shape: (1082, 9)\n",
+      "y - train shape: (2194,)\n",
+      "y - test shape: (1082,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"x - train shape:\",X_train.shape)\n",
+    "print(\"x - test shape:\",X_test.shape)\n",
+    "print(\"y - train shape:\",y_train.shape)\n",
+    "print(\"y - test shape:\",y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.50577104, 0.15813584, 0.8132832 , ..., 0.3258781 , 0.33895476,\n",
+       "        0.57834489],\n",
+       "       [0.5679608 , 0.45007002, 0.09648588, ..., 0.74217904, 0.64121875,\n",
+       "        0.51017301],\n",
+       "       [0.50791751, 0.56873263, 0.43606198, ..., 0.61251473, 0.69645632,\n",
+       "        0.89243596],\n",
+       "       ...,\n",
+       "       [0.50577104, 0.48358899, 0.23536226, ..., 0.29740754, 0.45897908,\n",
+       "        0.46544586],\n",
+       "       [0.50577104, 0.4820426 , 0.30574557, ..., 0.32114444, 0.45897908,\n",
+       "        0.50845248],\n",
+       "       [0.64477055, 0.73269368, 0.48845695, ..., 0.6003052 , 0.39068106,\n",
+       "        0.11913167]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# normalizing values \n",
+    "min_max_scale = MinMaxScaler()\n",
+    "X_train = min_max_scale.fit_transform(X_train)\n",
+    "X_test = min_max_scale.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# various models\n",
+    "models = [('Logistic Reg.',LogisticRegression()),\n",
+    "          ('SVM',SVC()),\n",
+    "          ('Decision Tree',DecisionTreeClassifier()),\n",
+    "          ('Random Foresr',RandomForestClassifier())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Logistic Reg.', 0.6044362292051756),\n",
+       " ('SVM', 0.634011090573013),\n",
+       " ('Decision Tree', 0.532347504621072),\n",
+       " ('Random Foresr', 0.6404805914972274)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = []\n",
+    "\n",
+    "for name,model in models:\n",
+    "\n",
+    "    model.fit(X_train,y_train)\n",
+    "    score = model.score(X_test,y_test)\n",
+    "    res.append((name,score))\n",
+    "\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas \n",
-    "import sklearn"
+    "# Do Hyperparameter training Later..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['water_quality']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Saving model\n",
+    "import joblib\n",
+    "model = RandomForestClassifier().fit(X_train,y_train)\n",
+    "joblib.dump(model,'water_quality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6201478743068392"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mj = joblib.load('water_quality')\n",
+    "mj.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Predicitng results\n",
+    "res = [8.316766,214.373394,22018.417441,8.059332,356.886136,363.266516,18.436524,100.341674,4.628771]\n",
+    "\n",
+    "mj.predict([res])[0]"
    ]
   }
  ],
@@ -25,7 +506,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.3"
   },
   "orig_nbformat": 4,
